Datepicker z-index fix

--- a/public/static/css/metadata/form.css
+++ b/public/static/css/metadata/form.css
@@ -94,3 +94,8 @@ legend {
 .panel-footer  .input-group-sm {
     margin: -6px; /* Search box */
 }
+
+#ui-datepicker-div {
+    z-index: 999!important;
+}
+
